# lolli

./: .gitignore  Cargo.toml  README.md
crates/lolli-cli/: Cargo.toml  README.md
crates/lolli-cli/src/: main.rs
crates/lolli-codegen/: Cargo.toml  README.md
crates/lolli-codegen/src/: codegen.rs  lib.rs  prelude.rs  types.rs
crates/lolli-core/: Cargo.toml  README.md
crates/lolli-core/src/: formula.rs  lib.rs  proof.rs  sequent.rs  term.rs
crates/lolli-extract/: Cargo.toml  README.md
crates/lolli-extract/src/: lib.rs
crates/lolli-parse/: Cargo.toml  README.md
crates/lolli-parse/src/: lib.rs
crates/lolli-prove/: Cargo.toml  README.md
crates/lolli-prove/src/: lib.rs  search.rs
crates/lolli-viz/: Cargo.toml  README.md
crates/lolli-viz/src/: ascii.rs  lib.rs
