[package]
name = "lolli-cli"
description = "Command-line interface for the Lolli linear logic workbench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "README.md"

[[bin]]
name = "lolli"
path = "src/main.rs"

[dependencies]
lolli-core.workspace = true
lolli-parse.workspace = true
lolli-prove.workspace = true
lolli-extract.workspace = true
lolli-codegen.workspace = true
lolli-viz.workspace = true
clap.workspace = true
colored.workspace = true
thiserror.workspace = true
