[package]
name = "lolli-parse"
description = "Parser for the Lolli linear logic workbench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
lolli-core.workspace = true
pest.workspace = true
pest_derive.workspace = true
thiserror.workspace = true
