[package]
name = "lolli-prove"
description = "Proof search for the Lolli linear logic workbench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
lolli-core.workspace = true
thiserror.workspace = true
